--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/abort-controller": "^3.171.0",
+    "@aws-sdk/client-s3": "^3.171.0",
+    "aws-sdk": "^2.1218.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -19,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
     "multer": "^1.4.2",
+    "multer-s3-v2": "^2.2.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
